--- a/ionic.config.json
+++ b/ionic.config.json
@@ -10,5 +10,11 @@
     "www/**/*",
     "!www/lib/**/*",
     "!www/**/*.map"
+  ],
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://localhost:3000/"
+    }
   ]
 }
